--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -1,9 +1,9 @@
-name: Unit_Tests_On_PR
+name: Run Unit Tests on PR
 
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test:
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if (Test-Path "requirements.txt") { pip install -r requirements.txt }
 
       - name: Run unit tests
         run: python -m unittest discover -s parsers/tests
