--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -22,4 +22,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run unit tests
-        run: python -m unittest discover -s myproject/parsers/tests
+        run: python -m unittest discover -s web-server/parsers/tests
