--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -21,5 +21,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run unit tests
-        run: python -m unittest discover -s web-server/parsers/tests
+      - name: Run Django test
+        run:
+          python manage.py test
