--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -23,5 +23,5 @@ jobs:
 
       - name: Run Django test
         run: |
-          cd webserver
+          cd web-server
           python manage.py test
