--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -21,5 +21,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run unit tests
-        run: python -m unittest discover -s parsers/tests
+      - name: Run Django test
+        run: |
+          cd web-server
+          python manage.py test
