--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,6 @@
-asgiref==3.8.1
-beautifulsoup4==4.12.3
-black==24.4.2
-certifi==2024.2.2
-cfgv==3.4.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-distlib==0.3.8
-Django==5.0.6
-djangorestframework==3.15.1
-filelock==3.14.0
-identify==2.5.36
-idna==3.7
-mypy-extensions==1.0.0
-nodeenv==1.8.0
-packaging==24.0
-pathspec==0.12.1
-platformdirs==4.2.2
-pre-commit==3.7.1
-PyYAML==6.0.1
-requests==2.31.0
-setuptools==70.0.0
-soupsieve==2.5
-sqlparse==0.5.0
-tzdata==2024.1
-urllib3==2.2.1
-validators==0.28.1
-virtualenv==20.26.2
+validators~=0.28.1
+requests~=2.31.0
+beautifulsoup4~=4.12.3
+
+
+Django~=5.0.6
