--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -34,5 +34,6 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
+          cd web-server
           python manage.py migrate
           python manage.py test
