--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -28,6 +28,7 @@ jobs:
           python-version: '3.12.3'
       - name: Install dependencies
         run: |
+          python -m pip install setuptools wheel
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run tests
