--- a/.github/workflows/run-test-on-pr.yml
+++ b/.github/workflows/run-test-on-pr.yml
@@ -1,27 +1,37 @@
-name: Run Unit Tests on PR
+name: Django CI
 
-on:
-  pull_request:
+on:  pull_request
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: github_actions
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
+    env:
+      DJANGO_SETTINGS_MODULE: core.settings_tests
+
+    steps:
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12.3'
-
       - name: Install dependencies
         run: |
+          python -m pip install setuptools wheel
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run Django test
+      - name: Run tests
         run: |
           cd web-server
           python manage.py test
