--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 validators~=0.28.1
 requests~=2.31.0
 beautifulsoup4~=4.12.3
-
-
-Django~=5.0.6
+psycopg2-binary
+Django~=5.0.4
 djangorestframework~=3.15.1
+django-polymorphic~=3.1.0
