--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -8,5 +8,5 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 EXPOSE 8000
 COPY . .
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "1"]
 
