--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -12,5 +12,5 @@ EXPOSE 8000
 
 COPY . .
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "myproject.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "1"]
 
