--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -1,11 +1,11 @@
 validators~=0.28.1
-requests~=2.31.0
+requests
 beautifulsoup4~=4.12.3
 psycopg2-binary
 Django~=5.0.4
 djangorestframework~=3.15.1
 django-polymorphic~=3.1.0
 gunicorn~=22.0.0
-locust~=2.29.1
+locust
 django-polymorphic~=3.1.0
 
