--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -14,4 +14,4 @@ EXPOSE 8000
 
 COPY . .
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "web-server.core.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
