--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -1,9 +1,8 @@
 validators~=0.28.1
-requests
+requests~=2.31.0
 beautifulsoup4~=4.12.3
 psycopg2-binary
 Django~=5.0.4
 djangorestframework~=3.15.1
 django-polymorphic~=3.1.0
 gunicorn~=22.0.0
-locust
