--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -13,5 +13,4 @@ RUN pip install -r requirements.txt
 EXPOSE 8000
 
 COPY . .
-
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "1", "--worker-connections","1000", "--worker-class","gevent"]
