Corrected repo zone

--- a/k8s/web-server-deployment.yaml
+++ b/k8s/web-server-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: django-container
-        image: us-central1-docker.pkg.dev/winter-clone-429310-f7/web/web-server-image:latest
+        image: us-east1-docker.pkg.dev/winter-clone-429310-f7/web/web-server-image:latest
         ports:
         - containerPort: 8000
         envFrom:
