--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -58,12 +58,7 @@ jobs:
     - name: create env file
       run: |
         touch prod.env 
-        echo "
-        DB_HOST=${{ secrets.DB_HOST }}
-        DB_NAME=${{ secrets.DB_NAME }}
-        DB_USER=${{ secrets.DB_USER }}
-        DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-        " >> prod.env
+        printf "DB_HOST=${{ secrets.DB_HOST }}\nDB_NAME=${{ secrets.DB_NAME }}\nDB_USER=${{ secrets.DB_USER }}\nDB_PASSWORD=${{ secrets.DB_PASSWORD }}\n" > prod.env
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
