--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -62,8 +62,9 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        kubectl get configmap env-config &&  kubectl delete configmap env-config
+        kubectl get configmap env-config && kubectl delete configmap env-config
         kubectl create configmap env-config --from-env-file=prod.env
         kubectl apply -f k8s/web-server-deployment.yaml
         kubectl apply -f k8s/loadBalancerService.yaml
+        kubectl rollout restart deploy django-deployment
         kubectl get pods
