Add GitHub Actions workflow for building and deploying Docker image to GKE (#41)
* Allowed all hosts

* Instead of image that was in dockerhub repo, used image that was in early created Artifact Registry repo,also changed the name of configmap

* Added GitHub Actions workflow for building and deploying Docker image to GKE

* Modified to create configmap every time we run workflow

* Added command to restart deployment to ensure that our applications picks up latest changes

--- a/k8s/web-server-deployment.yaml
+++ b/k8s/web-server-deployment.yaml
@@ -14,9 +14,9 @@ spec:
     spec:
       containers:
       - name: django-container
-        image: hayko2508/web-server-image:latest
+        image: us-east1-docker.pkg.dev/winter-clone-429310-f7/web/web-server-image:latest
         ports:
         - containerPort: 8000
         envFrom:
           -  configMapRef:
-              name: prod
+              name: env-config
