--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -7,3 +7,6 @@ djangorestframework~=3.15.1
 django-polymorphic~=3.1.0
 gunicorn~=22.0.0
 gevent
+django-storages==1.14.4
+google-cloud-storage==2.18.0
+google-auth==2.32.0
