Hosting static files in GCS (#45)
* Configured to host static files in GCS

* Added necessary packages

* Added 'storages' to INSTALLED_APPS


* Flag 'GS_QUERYSTRING_AUTH' is set to False to dont have signed urls, and 'GS_DEFAULT_ACL' to PublicRead to return a public url

--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -58,7 +58,7 @@ jobs:
     - name: create env file
       run: |
         touch prod.env 
-        printf "DB_HOST=${{ secrets.DB_HOST }}\nDB_NAME=${{ secrets.DB_NAME }}\nDB_USER=${{ secrets.DB_USER }}\nDB_PASSWORD=${{ secrets.DB_PASSWORD }}\n" > prod.env
+        printf "DB_HOST=${{ secrets.DB_HOST }}\nDB_NAME=${{ secrets.DB_NAME }}\nDB_USER=${{ secrets.DB_USER }}\nDB_PASSWORD=${{ secrets.DB_PASSWORD }}\nGS_BUCKET_NAME=${{ secrets.GS_BUCKET_NAME }}\n" > prod.env
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
